--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,6 +9,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  release:
+        types: [ published ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -27,7 +29,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: |
+          git branch
+          git status
+          git describe
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
