--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,8 @@ jobs:
         run: |
           git branch
           git status
-          git describe
+          git tag
+          #git describe
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
