--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,7 +35,8 @@ jobs:
           git branch
           git status
           git tag
-          #git describe
+          git describe --tags
+          git describe --all
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
