--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          git describe
+          git tag -l -n9
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
