--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,3 +38,13 @@ jobs:
       - name: Run a multi-line script
         run: |
           set
+          
+  deploy:
+    environment: test
+      steps:
+        - name: file
+          run: |
+            echo "$KUBECONFIG_FILE" > /tmp/kube.config
+            cat /tmp/kube.config
+          env:
+            KUBECONFIG_FILE: ${{ secrets.TEST_FILE }}
