--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,11 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      env-to-dep:
+        description: 'env-to-dep'
+        required: true
+        default: 'test'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -40,7 +45,7 @@ jobs:
           set
           
   deploy:
-    environment: test
+    environment: ${{ github.event.inputs.env-to-dep }}
     runs-on: ubuntu-latest
     steps:
       - name: file
