--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,9 @@ on:
       env-to-dep:
         description: 'env-to-dep'
         required: true
-        default: 'test'
+        default: $DEFAULT-ENV-TO-DEP
+env:
+  default-env-to-dep: 'test'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
