--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,7 @@ on:
       env-to-dep:
         description: 'env-to-dep'
         required: false
-        default: 'test'
+        default: 'TEST'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -25,6 +25,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      test_file_secret_name: '${{ github.event.inputs.env-to-dep }}-FILE'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -40,8 +42,11 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        env:
+          FILE_CONTENT: ${{ secrets[env.test_file_secret_name] }}
         run: |
           set
+          echo $FILE_CONTENT | base64 -d
           
   deploy:
     environment: test
