--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      test_file_secret_name: '${{ github.event.inputs.env-to-dep }}-FILE'
+      test_file_secret_name: '${{ github.event.inputs.env-to-dep }}_FILE'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
