--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -1,14 +1,10 @@
 name: Test
 on:
     workflow_dispatch:
-        inputs:
-            in1:
-                required: true
-                default: 'test'
 jobs:
     dummy:
         name: dummy
         runs-on: ubuntu-latest
-#        steps:
-#        -   name: Print input
-#            run: echo "$${{github.event.inputs.in1}}"
+        steps:
+        -   name: Print input
+            run: echo "${{github.event.inputs.in1}}"
