--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   workflow_run:
     workflows: ["Build"]
-    branches: [main]
+    branches: [main, jok26r-patch-2]
     types:
       - completed
 
